# Behavioral-Health-Outreach-Propensity-Modeling-Operational-Reporting

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
scripts/: run_pipeline.sh
sql/: outreach_feature_extract.sql
src/outreach_model/: cli.py  data.py  metrics.py  model.py  pipeline.py
tests/: test_pipeline.py
